--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "drum-machine2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mjguggen.github.io/Drum-Pad/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -12,6 +13,8 @@
     "react-scripts": "3.3.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
